<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_bottom_nav_home"
        android:title="@string/bottom_navigation_home" />
    <item
        android:id="@+id/bottom_nav_marketplace"
        android:icon="@drawable/ic_bottom_nav_marketplace"
        android:title="@string/bottom_navigation_marketplace" />
    <item
        android:id="@+id/bottom_nav_lend_out"
        android:icon="@drawable/ic_bottom_nav_lend_out"
        android:title="@string/bottom_navigation_lend_out" />
    <item
        android:id="@+id/bottom_nav_recycle_center"
        android:icon="@drawable/ic_welcome_recycle"
        android:title="@string/bottom_navigation_recycle_center" />
    <item
        android:id="@+id/bottom_nav_messages"
        android:icon="@drawable/ic_bottom_nav_messages"
        android:title="@string/bottom_navigation_messages" />
</menu>